# OptCuts

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  batch.py  batch_RSP.py  build.py  display.py
.github/workflows/: main.yml
FracCuts/: ARAPEnergy.cpp  ARAPEnergy.hpp  CohesiveEnergy.cpp  CohesiveEnergy.hpp  Diagnostic.hpp  Energy.cpp  Energy.hpp  GIF.hpp  IglUtils.cpp  IglUtils.hpp  MeshProcessing.hpp  Optimizer.cpp  Optimizer.hpp  PardisoSolver.cpp  PardisoSolver.hpp  Scaffold.cpp  Scaffold.hpp  SeparationEnergy.cpp  SeparationEnergy.hpp  SymStretchEnergy.cpp  SymStretchEnergy.hpp  Timer.hpp  TriangleSoup.cpp  TriangleSoup.hpp  Types.hpp  main.cpp
FracCuts.xcodeproj/: project.pbxproj
FracCuts.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FracCuts.xcodeproj/xcuserdata/mincli.xcuserdatad/xcschemes/: FracCuts.xcscheme  xcschememanagement.plist
cmake/: FindLIBIGL.cmake  OptCutsDependencies.cmake  OptCutsDownloadExternal.cmake
display/: ExpInfo.js  display.html  displayResults.js
input/RSP/: dilo_o_f10000_selected.txt  face_f10000_selected.txt
paper/: DCSearch.tex  OptCuts.aux  OptCuts.bbl  OptCuts.bib  OptCuts.blg  OptCuts.dvi  OptCuts.out  OptCuts.tex  acmart.cls  alternatingFramework.tex  appendix.tex  autoWeighting.tex  conclusions.tex  descentSteps.tex  implementation.tex  introduction.tex  optFramework.tex  overview.tex  problem.tex  relatedWorks.tex  relatedWorks_2.tex  results.tex  topologySteps.tex  topologySteps_2.tex
src/: Optimizer.cpp  Optimizer.hpp  Scaffold.cpp  Scaffold.hpp  TriMesh.cpp  TriMesh.hpp  Types.hpp  main.cpp
src/Energy/: Energy.cpp  Energy.hpp  SymDirichletEnergy.cpp  SymDirichletEnergy.hpp
src/LinSysSolver/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  EigenLibSolver.cpp  EigenLibSolver.hpp  LinSysSolver.hpp  PardisoSolver.cpp  PardisoSolver.hpp
src/UnitTest/: Diagnostic.hpp  MeshProcessing.hpp
src/Utils/: IglUtils.cpp  IglUtils.hpp  cut_to_disk.cpp  cut_to_disk.hpp
